# hydrowatch

./: .env.example  .gitignore  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.py
ai_service/: summarizer.py
django_app/: Dockerfile  manage.py  requirements.txt
django_app/alerts/: admin.py  cooldown_validators.py  forms.py  models.py  rule_validators.py  test_cooldown_validators.py  test_rule_validators.py  urls.py  views.py
django_app/alerts/migrations/: 0001_initial.py
django_app/alerts/templates/alerts/: alert_confirm_delete.html  (+2 more)
django_app/api/: param_validators.py  serializers.py  test_param_validators.py  test_stats_endpoint.py  urls.py  views.py
django_app/dashboard/: admin.py  csv_export.py  models.py  precip_validators.py  range_validators.py  tasks.py  test_precip_validators.py  test_range_validators.py  test_station_download_csv.py  test_tasks_cooldown_integration.py  test_validators.py  urls.py  validators.py  views.py
django_app/dashboard/migrations/: 0001_initial.py
django_app/dashboard/templatetags/: json_filters.py
django_app/hydrowatch/: celery.py  settings.py  urls.py  wsgi.py
django_app/reports/: admin.py  filename_validators.py  models.py  pdf_generator.py  summarizer.py  test_filename_validators.py  test_summarizer.py  urls.py  views.py
django_app/reports/migrations/: 0001_initial.py
ingestion_service/: Dockerfile  config.py  coordinate_validators.py  main.py  requirements.txt  station_validators.py  test_coordinate_validators.py  test_station_validators.py
nginx/: nginx.conf
pytest/: __main__.py
(+5 files in other folders)
