[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rem-str-mq53ggja"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = ["pytest"]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
